# manipulation_interface

./: README.md
initial_interface/: CMakeLists.txt  mainpage.dox  package.xml
initial_interface/include/initial_interface/: qnode.hpp
initial_interface/launch/: start.launch
initial_interface/src/: main.cpp  main_window.cpp  main_window.hpp  qnode.cpp  qnode.hpp
initial_interface/ui/: main_window.ui
manipulation_interface_gui/: CMakeLists.txt  mainpage.dox  package.xml
manipulation_interface_gui/launch/: goto.launch  interface.launch  pick.launch  place.launch  skills.launch
manipulation_interface_gui/resources/: images.qrc
manipulation_interface_gui/src/: main.cpp  main_window.cpp  main_window.cpp.autosave  main_window.hpp  main_window.ui  main_window.ui.autosave  qnode.cpp  qnode.hpp  recipe_test_node.cpp
manipulation_interface_gui/srv/: RunRecipeTest.srv
manipulation_interface_mongo/: CMakeLists.txt  package.xml
manipulation_interface_mongo/config/: go_to_location_server.yaml  inbound_server.yaml  mongo_db_name.yaml  multi_skills.yaml  objects_geometric_description.yaml  objects_geometric_descritpion.yaml  outbound_server.yaml
manipulation_interface_mongo/launch/: start.launch
manipulation_interface_mongo/src/: mongo_connection.py  mongo_set_example_operator_param.py  mongo_set_server_param.py
manipulation_interface_mongo/srv/: ChangeDB.srv  GetDbNames.srv
mongo_interactions/: CMakeLists.txt  package.xml
mongo_interactions/src/: mongo_connection.py  mongo_connection.py.autosave  mongo_first_set.py  mongo_secondary_param_set.py  mongo_set_example_operator_param.py  mongo_set_server_param.py
second_interface/: CMakeLists.txt  mainpage.dox  package.xml
second_interface/include/second_interface/: main_window.hpp  qnode.hpp
second_interface/src/: main.cpp  main_window.cpp  main_window.hpp  qnode.cpp  qnode.hpp
second_interface/ui/: main_window.ui
