<?xml version="1.0"?>
<package>
  <name>manipulation_interface_gui</name>
  <version>0.1.0</version>
  <description>

     manipulation_interface_gui

  </description>
  <maintainer email="michele@gmail.com">michele</maintainer>
  <author>michele</author>
  <license>BSD</license>
  <!-- <url type="bugtracker">https://github.com/stonier/qt_ros/issues</url> -->
  <!-- <url type="repository">https://github.com/stonier/qt_ros</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>qt_build</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>libqt4-dev</build_depend>
  <build_depend>manipulation_msgs</build_depend>
  <build_depend>configuration_msgs</build_depend>
  <build_depend>manipulation_interface_mongo</build_depend>
  <build_depend>rosparam_utilities</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>qt_build</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>libqt4-dev</run_depend>
  <run_depend>manipulation_msgs</run_depend>
  <run_depend>configuration_msgs</run_depend>
  <run_depend>manipulation_interface_mongo</run_depend>
  <run_depend>rosparam_utilities</run_depend>
  <run_depend>tf</run_depend>


</package>
